<resources>
    <string name="app_name">Remainder</string>
    <string name="newAction">New Action</string>
    <string name="addNew">Add Action</string>
    <string name="add">Add</string>
    <string name="until">Until</string>
    <string name="repeat">Repeat every</string>
    <string name="calendarTitle">Set your date</string>
    <string-array name="quantity">
        <item>Time</item>
        <item>Pages</item>
        <item>Lines</item>
        <item>Items</item>
    </string-array>
    <string name="time">Time</string>
    <string-array name="one">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>
    <string-array name="plural">
        <item>days</item>
        <item>weeks</item>
        <item>months</item>
        <item>years</item>
    </string-array>
    <string name="amountText" translatable="false">%1$d</string>
    <string name="amountTime" translatable="false">%1$d:%2$d%3$d</string>
    <string name="amountTimeWithSeconds" translatable="false">%1$d:%2$d%3$d:%4$d%5$d</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="plusOne" translatable="false">+1</string>
    <string name="plusTen" translatable="false">+10</string>
    <string name="plusHundred" translatable="false">+100</string>
    <string name="allDone">Done</string>
    <plurals name="daysLeft">
        <item quantity="one">%1$d day left</item>
        <item quantity="other">%1$d days left</item>
    </plurals>
    <string name="date" translatable="false">%1$d-%2$d-%3$d</string>
    <string name="doItAgain">Do it again</string>
    <string name="youAreDone">You are done with your task</string>
    <string name="spendMoreTime">You have to spend %1$s more!</string>
</resources>
