<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/actionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newAction"
        android:textSize="25sp"
        android:inputType="text"/>
    <Spinner
        android:id="@+id/actionSpinner"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@id/actionName"/>
    <LinearLayout
        android:id="@+id/typeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/actionSpinner"
        android:layout_below="@id/actionName"
        android:orientation="horizontal">
    </LinearLayout>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionSpinner"
        android:layout_marginEnd="10dp">
        <RadioButton
            android:id="@+id/until"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/until"
            android:textSize="25sp"/>
        <RadioButton
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/repeat"
            android:textSize="25sp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeLayout"
        android:layout_toEndOf="@id/radioGroup"
        android:text="/"
        android:textSize="39sp"
        android:onClick="calendarPopup"/>
    <EditText
        android:id="@+id/periodEdit"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateText"
        android:layout_toEndOf="@id/radioGroup"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:maxLength="2"
        android:maxLines="1"
        android:inputType="number"
        android:textSize="30sp"
        android:textAlignment="center"/>
    <Spinner
        android:id="@+id/periodSpinner"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_below="@id/dateText"
        android:layout_toEndOf="@id/periodEdit"/>
    <Button
        android:id="@+id/addAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/periodSpinner"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignParentEnd="true"
        android:text="@string/add"
        android:onClick="addAction"/>

</RelativeLayout>